# lm-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  covers.rs  error.rs  ignite.rs  main.rs  moviedb.rs  watcher.rs
src/pages/: cover.rs  group.rs  index.rs  mod.rs  sub.rs  video.rs
webapp/: common.js  index.html  index.js  jsconfig.json
webapp/pages/: collections.js  error.js  videos.js
webapp/styles/: collections.css  error.css  fonts.css  index.css  scrollbar.css  videos.css
