[package]
name = "lm-server"
version = "0.1.0"
authors = ["Csányi István <csanyistvan02@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/AmionSky/lm-server"
edition = "2018"

# Dependencies
[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
rocket = { git = "https://github.com/AmionSky/Rocket.git" }
hotwatch = "0.4.2"
crossbeam-utils = "0.7.0"
get_if_addrs = "0.5.3"

[dependencies.rocket_contrib]
git = "https://github.com/AmionSky/Rocket.git"
default-features = false
features = ["json"]

# Build config
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false