[package]
name = "lm-server"
version = "0.1.0"
authors = ["Csányi István <csanyistvan02@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/AmionSky/lm-server"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hotwatch = "0.4"
crossbeam-utils = "0.8"
get_if_addrs = "0.5"
actix-web = "3.3"
actix-rt = "2.2"
actix-files = "0.5"
futures = "0.3"
simplelog = "0.10"
ureq = "2.1"
percent-encoding = "2.1"
log = "0.4"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false